// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > getReviewRoles > audit > expected call 1`] = `
[
  {
    "collaboratorRole": "Contributor",
    "name": "Reviewer",
    "shortName": "reviewer",
  },
]
`;

exports[`routes > review > getReviewRoles > returns review roles 1`] = `
{
  "reviewRoles": [
    {
      "collaboratorRole": "Contributor",
      "name": "Reviewer",
      "shortName": "reviewer",
    },
  ],
}
`;
